# pricepilot.ai

./: README.md
pricepilot.ai-api/: .gitignore  README.md  main.py  pyproject.toml  railway.json  requirements.txt
pricepilot.ai-api/app/: main.py
pricepilot.ai-api/app/api/: generate_campaign_content.py.
pricepilot.ai-api/app/core/: config.py  security.py
pricepilot.ai-api/app/db/: sessions.py
pricepilot.ai-api/app/helpers/: monte_carlo_prompt_generator.py  validate_schema_detailed.py
pricepilot.ai-api/app/models/: __init__.py  action_outcome.py  campaign.py  campaign_simulation.py  channel.py  competitor.py  competitor_price.py  elasticity.py  elasticity_estimate.py  enums.py  inventory.py  markdown.py  markdown_action_log.py  markdown_evaluation.py  price_history.py  product.py  product_status.py  sales.py  sales_daily.py  setting.py  settings.py  simulation_day_data.py  simulation_initial_state.py
pricepilot.ai-api/app/prompts/: __init__.py  agent_run_prompt.py  clearance_master_template.py  clearance_prompts.py  find_clearance_products_prompt.py  view_clearance_detailed_analysis_prompt.py
pricepilot.ai-api/app/schemas/: clearance_candidate.py  clearance_products_response.py  combined_analysis_response.py  elasticity_method.py
pricepilot.ai-api/app/services/: clearance_service.py  elasticity_service.py  monte_carlo_adapter.py  monte_carlo_engine.py  product_analysis_service.py
pricepilot.ai-api/mocks/: agent_plan_mock.json  clearance_analysis_mock.json  clearance_products_mock.json  combined_clearance_mock.json  monte_carlo_simulation_mock.json
(+86 files in other folders)
